fix: mobile sbas gap detected message

--- a/src/app/components/results-menu/mobile-results-menu/mobile-results-menu.component.scss
+++ b/src/app/components/results-menu/mobile-results-menu/mobile-results-menu.component.scss
@@ -90,6 +90,7 @@
 }
 
 .baseline-header-button-group {
+  display: flex;
   justify-content: center;
 }
 
